# juce-qt-template

./: .gitignore  .gitmodules  CMakeLists.txt
src/: PluginProcessor.cpp  PluginProcessor.h  main.qml
src/dsp/: Processor.cpp  Processor.hpp  SineOscillator.cpp  SineOscillator.hpp
